Subindo a parte dos convenios corrigida - Funcionando 100%